# ee205-animal-farm

./: Animal.cpp  Animal.h  CMakeLists.txt  CONTRIBUTE.md  Cat.cpp  Cat.h  Color.h  Gender.h  List.cpp  List.h  Mammal.cpp  Mammal.h  Node.cpp  Node.h  README.md  SinglyLinkedList.cpp  SinglyLinkedList.h  Weight.cpp  Weight.h  addCats.cpp  catDatabase.cpp  deleteCats.cpp  main.cpp  main.h  reportCats.cpp  salvage.txt  test.cpp  updateCats.cpp  util.cpp  util.h
generated_docs/html/: Animal_8cpp.html  Animal_8cpp__incl.map  Animal_8cpp__incl.md5  Animal_8h.html  Animal_8h.js  Animal_8h__dep__incl.map  Animal_8h__dep__incl.md5  Animal_8h__incl.map  Animal_8h__incl.md5  Animal_8h_source.html  Cat_8cpp.html  Cat_8cpp__incl.map  Cat_8cpp__incl.md5  Cat_8h.html  Cat_8h.js  Cat_8h__dep__incl.map  Cat_8h__dep__incl.md5  Cat_8h__incl.map  Cat_8h__incl.md5  Cat_8h_source.html  Color_8h.html  Color_8h__dep__incl.map  Color_8h__dep__incl.md5  Color_8h_source.html  Gender_8h.html  Gender_8h__dep__incl.map  Gender_8h__dep__incl.md5  Gender_8h_source.html  List_8cpp.html  List_8cpp__incl.map  List_8cpp__incl.md5  List_8h.html  List_8h.js  List_8h__dep__incl.map  List_8h__dep__incl.md5  List_8h__incl.map  List_8h__incl.md5  List_8h_source.html  Mammal_8cpp.html  Mammal_8cpp__incl.map  (+108 more)
generated_docs/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  classes_3.js  classes_5.js  classes_6.js  files_0.js  files_1.js  files_4.js  (+5 more)
src/: Animal.cpp  Cat.h  Color.h  List.cpp  List.h  Mammal.cpp  Node.cpp  SinglyLinkedList.h  main.cpp  main.h  util.h
